# kdri

./: .gitignore  Cargo.toml  README.md  build.rs
cextras/: lib.c
examples/: cli.rs
inc/: kdri.h
src/: crc.rs  ffi.rs  lib.rs
