[package]
name = "kdri"
version = "0.4.2"
authors = ["Chang Spivey <chang.spivey@gmail.com>"]
description = "Library that lets you control Kettler devices via bluetooth"
repository = "https://github.com/ChangSpivey/kdri"
readme = "README.md"
keywords = ["kettler", "bluetooth", "SPP", "RFCOMM", "remote"]
license = "GPL-3.0"

[dependencies]
bluetooth-serial-port = "0.3"
mio = "0.5"
enum_primitive = "0.1.0"

[lib]
name = "kdri"
